# MinimalHomotopy

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
apps/: letters.cpp  main.cpp  svg_main.cpp
examples/letters/: README.md
include/minimal_homotopy/: curve.hpp  homotopy_area.hpp  kernel.hpp  result.hpp  svg.hpp  winding.hpp
src/: curve.cpp  homotopy_area.cpp  svg.cpp  winding.cpp
test/: test_homotopy_area.cpp  test_main.cpp  test_stress.cpp  test_winding.cpp
